--- a/package.json
+++ b/package.json
@@ -3,20 +3,26 @@
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.8",
-    "expo-status-bar": "~1.12.1",
+    "@rocketseat/eslint-config": "^2.2.2",
+    "eslint": "^9.3.0",
+    "expo": "^49",
+    "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "0.72.10",
+    "react-native-gesture-handler": "^2.16.2",
+    "react-native-reanimated": "~3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "expo-dev-client": "^4.0.14",
     "typescript": "^5.1.3"
   },
   "private": true
